# newko

./: .gitignore  CMakeLists.txt  Makefile  Render  temp.c
include/: sdl_resources.h
src/: init.c  loadmedia.c  sdlfree.c  test.c
